--- a/src/views/html/moderator/adm-editchannel.ejs
+++ b/src/views/html/moderator/adm-editchannel.ejs
@@ -53,19 +53,7 @@
 				</div><!--//row-->
 
 
-				<nav id="orders-table-tab"
-					class="orders-table-tab app-nav-tabs nav shadow-sm flex-column flex-sm-row mb-4">
-					<a class="flex-sm-fill text-sm-center nav-link active" id="orders-all-tab" data-bs-toggle="tab"
-						href="#orders-all" role="tab" aria-controls="orders-all" aria-selected="true">Todos</a>
-					<a class="flex-sm-fill text-sm-center nav-link" id="orders-paid-tab" data-bs-toggle="tab"
-						href="#orders-paid" role="tab" aria-controls="orders-paid" aria-selected="false">Paid</a>
-					<a class="flex-sm-fill text-sm-center nav-link" id="orders-pending-tab" data-bs-toggle="tab"
-						href="#orders-pending" role="tab" aria-controls="orders-pending"
-						aria-selected="false">Pending</a>
-					<a class="flex-sm-fill text-sm-center nav-link" id="orders-cancelled-tab" data-bs-toggle="tab"
-						href="#orders-cancelled" role="tab" aria-controls="orders-cancelled"
-						aria-selected="false">Cancelled</a>
-				</nav>
+			
 
 
 				<div class="tab-content" id="orders-table-tab-content">
@@ -132,11 +120,13 @@
 
 										</tbody>
 									</table>
-										<a href="<%- `/index/sensor/create/${channelId}` %>"">
+									<% if(permission=='MODERATOR') { %>
+									<a href="<%- `/index/sensor/create/${channelId}` %>"">
 										<button class="btn btn-primary mt-3 mb-2 mx-2 text-white">
 											Criar Sensor
 										</button>
 									</a>
+									<%}%>
 								</div><!--//table-responsive-->
 
 							</div><!--//app-card-body-->
