--- a/src/views/html/moderator/index.ejs
+++ b/src/views/html/moderator/index.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title>Página ADMIN</title>
+	<title>Início</title>
 
 	<!-- Meta -->
 	<meta charset="utf-8">
@@ -11,7 +11,6 @@
 
 	<meta name="description" content="Portal - Bootstrap 5 Admin Dashboard Template For Developers">
 	<meta name="author" content="Xiaoying Riley at 3rd Wave Media">
-	<link rel="shortcut icon" href="favicon.ico">
 
 	<!-- FontAwesome JS-->
 	<script defer src="/assets/js/app.js"></script>
@@ -29,22 +28,22 @@
 
 				<div class="row g-3 mb-4 align-items-center justify-content-between">
 					<div class="col-auto">
+    
 						<h1 class="app-page-title mb-0">Canais</h1>
 					</div>
 					<div class="col-auto">
 						<div class="page-utilities">
 							<div class="row g-2 justify-content-start justify-content-md-end align-items-center">
 								<div class="col-auto">
-									<!--Search div Orders
-										
-										<form class="table-search-form row gx-1 align-items-center">
+
+									<form class="table-search-form row gx-1 align-items-center">
 					                    <div class="col-auto">
-					                        <input type="text" id="search-orders" name="searchorders" class="form-control search-orders" placeholder="Search">
+					                        <input type="text" onkeyup="findChannels()" id="search-orders" name="searchorders" class="form-control search-orders" placeholder="Nome, ID, Chave">
 					                    </div>
 					                    <div class="col-auto">
-					                        <button type="submit" class="btn app-btn-secondary">Search</button>
+					                        <button onclick="findChannels()"  class="btn app-btn-secondary">Procurar</button>
 					                    </div>
-					                </form> -->
+					                </form> 
 
 								</div><!--//col-->
 							</div><!--//row-->
@@ -53,17 +52,7 @@
 				</div><!--//row-->
 
 
-				<nav id="orders-table-tab"
-					class="orders-table-tab app-nav-tabs nav shadow-sm flex-column flex-sm-row mb-4">
-					<a class="flex-sm-fill text-sm-center nav-link active" id="orders-all-tab" data-bs-toggle="tab"
-						href="#orders-all" role="tab" aria-controls="orders-all" aria-selected="true">Todos</a>
-					<a class="flex-sm-fill text-sm-center nav-link" id="orders-all-tab" data-bs-toggle="tab"
-						href="#orders-all" role="tab" aria-controls="orders-all" aria-selected="false">Ativos</a>
-					<a class="flex-sm-fill text-sm-center nav-link" id="orders-pending-tab" data-bs-toggle="tab"
-						href="#orders-pending" role="tab" aria-controls="orders-pending"
-						aria-selected="false">Não Ativos</a>
-				</nav>
-
+			
 
 				<div class="tab-content" id="orders-table-tab-content">
 					<div class="tab-pane fade show active" id="orders-all" role="tabpanel"
@@ -79,8 +68,6 @@
 												<th class="cell">Data de Criação</th>
 												<th class="cell">Data de Atualização</th>
 												<th class="cell">Chave de Leitura</th>
-												<th class="cell">Chave de Escrita</th>
-												<th class="cell">Status</th>
 											</tr>
 										</thead>
 										<tbody>
@@ -92,30 +79,35 @@
 													<td><%-dados[i].createdAt%></td>
 													<td><%-dados[i].updatedAt%></td>
 													<td><%-dados[i].token_read%></td>
-													<td><%-dados[i].token_write%></td>
-
+													
 													<td>
-														<%if(dados[i].status !=false) {%>
-															<svg xmlns="http://www.w3.org/2000/svg" width="16"
-																height="16" fill="currentColor" class="bi bi-check"
-																viewBox="0 0 16 16">
-																<path
-																	d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z" />
+														<div class="dropdown">
+															<div class="dropdown-toggle no-toggle-arrow" data-bs-toggle="dropdown" aria-expanded="false">
+																<svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-three-dots-vertical" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+															<path fill-rule="evenodd" d="M9.5 13a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z"/>
 															</svg>
-															<%} else{%>
-																<svg xmlns="http://www.w3.org/2000/svg" width="16"
-																	height="16" fill="currentColor" class="bi bi-x"
-																	viewBox="0 0 16 16">
-																	<path
-																		d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z" />
-																</svg>
-																<%}%>
+																						</div><!--//dropdown-toggle-->
+																						<ul class="dropdown-menu">
+																							<li><a class="dropdown-item" href="<%= `http://localhost:3000/index/sensors/${dados[i].id}`%>"><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-eye me-2" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+													  <path fill-rule="evenodd" d="M16 8s-3-5.5-8-5.5S0 8 0 8s3 5.5 8 5.5S16 8 16 8zM1.173 8a13.134 13.134 0 0 0 1.66 2.043C4.12 11.332 5.88 12.5 8 12.5c2.12 0 3.879-1.168 5.168-2.457A13.134 13.134 0 0 0 14.828 8a13.133 13.133 0 0 0-1.66-2.043C11.879 4.668 10.119 3.5 8 3.5c-2.12 0-3.879 1.168-5.168 2.457A13.133 13.133 0 0 0 1.172 8z"/>
+													  <path fill-rule="evenodd" d="M8 5.5a2.5 2.5 0 1 0 0 5 2.5 2.5 0 0 0 0-5zM4.5 8a3.5 3.5 0 1 1 7 0 3.5 3.5 0 0 1-7 0z"/>
+													</svg>Visualizar</a></li>
+																							<li><a class="dropdown-item" href="<%= `/index/channel/edit/${dados[i].id}`%>"><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-pencil me-2" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+													  <path fill-rule="evenodd" d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5L13.5 4.793 14.793 3.5 12.5 1.207 11.207 2.5zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293l6.5-6.5zm-9.761 5.175l-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z"/>
+													</svg>Editar</a></li>
+																							<li><a class="dropdown-item" onclick="fetchTemperatureLogs(<%- `${dados[i].id}  ,'${ dados[i].token_read}'` %>)"href="#"><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-download me-2" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+													  <path fill-rule="evenodd" d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z"/>
+													  <path fill-rule="evenodd" d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z"/>
+													</svg>Download</a></li>
+																							<li><hr class="dropdown-divider"></li>
+																							<li><a class="dropdown-item" href="<%= `/api/channels/m/${dados[i].id}`%>"><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-trash me-2" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+													  <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"/>
+													  <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4L4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"/>
+													</svg>Deletar</a></li>
+																						</ul>
+														</div>
+
 													</td>
-													<td><a href="<%= `/index/channel/${dados[i].id}/edit_view`%>"><button
-																class="btn btn-primary mx-3 text-white">Edit</button></a></td>
-													<td><a
-															href="<%= `/api/channels/delet/${dados[i].id}`%>"><button
-																class="btn btn-danger">Delete</button></a></td>
 
 												</tr>
 
@@ -123,6 +115,8 @@
 
 										</tbody>
 									</table>
+									                         
+									
 								</div><!--//table-responsive-->
 
 								<a href="/index/channel/create">
@@ -131,37 +125,19 @@
 									</button>
 								</a>
 
-								<a href="/index/adm/logTemp">
-									<button class="btn btn-primary mt-3 mb-2 mx-2 text-white">
-										Log Temperatura (Fins de Teste)
-									</button>
-								</a>
-
 							</div><!--//app-card-body-->
 						</div><!--//app-card-->
-						<%if (dados.length >= 8) {%>
-							<nav class="app-pagination">
-							<ul class="pagination justify-content-center">
-								<li class="page-item disabled">
-									<a class="page-link" href="#" tabindex="-1" aria-disabled="true">Previous</a>
-							    </li>
-								<li class="page-item active"><a class="page-link" href="#">1</a></li>
-								<li class="page-item"><a class="page-link" href="#">2</a></li>
-								<li class="page-item"><a class="page-link" href="#">3</a></li>
-								<li class="page-item">
-								    <a class="page-link" href="#">Next</a>
-								</li>
-							</ul> 
-						</nav>
-						<%}%>
 
+						
 					</div><!--//tab-pane-->
 				</div><!--//tab-content-->
 
 
-
+			<canvas id="chartContainer"></canvas>
 			</div><!--//container-fluid-->
 		</div><!--//app-content-->
+
+		    
 		<footer class="app-footer fixed-bottom">
 			<div class="container text-center py-3">
 				 <!--/* This template is free as long as you keep the footer attribution link. If you'd like to use the template without the attribution link, you can buy the commercial license via our website: themes.3rdwavemedia.com Thank you for your support. :) */-->
@@ -169,14 +145,100 @@
 			   
 			</div>
 		</footer><!--//app-footer-->
+	
 
 	</div><!--//app-wrapper-->
 
 
 	<!-- Javascript -->
+	<script>
+		async function fetchTemperatureLogs(channelId) {
+			try {
+				const response = await fetch(`/api/channels/${channelId}`);
+				if (!response.ok) {
+					throw new Error(`Erro ao buscar dados do canal: ${response.statusText}`);
+				}
+	
+				const channelData = await response.json();
+				console.log(`Dados do canal ${channelId}:`, channelData);
+	
+				if (channelData.Sensores && channelData.Sensores.length > 0) {
+					console.log('Sensores do canal:');
+					const data_logs = await Promise.all(channelData.Sensores.map(sensor => fetch(`/api/sensors/${sensor.id}/temperature-logs`).then(res => res.json())));
+	
+					downloadCSV({data: channelData, logs: data_logs});
+				} else {
+					console.log('Nenhum sensor encontrado para este canal.');
+				}
+			} catch (error) {
+				console.error('Erro ao buscar dados do canal:', error);
+			}
+		}
+	
+		function convertChartDataToCSV(args) {
+			const columnDelimiter = args.columnDelimiter || ',';
+			const lineDelimiter = args.lineDelimiter || '\n';
+			const labels = ["created_at", "entry_id", ...args.data.Sensores.map((_, i) => `field${i+1}`)];
+			let csv = labels.join(columnDelimiter) + lineDelimiter;
+				
+			args.logs[0].forEach((log, i) => {
+				csv += log.created_at + columnDelimiter + (i+1);
+				args.logs.forEach(log => {
+					csv += columnDelimiter + log[i].temperature;
+				});
+				csv += lineDelimiter;
+			});
+	
+			return csv;
+		}
+	
+		function downloadCSV(args) {
+			let csv = convertChartDataToCSV(args);
+			if (csv == null) return;
+	
+			const filename = args.filename || 'data.csv';
+			csv = 'data:text/csv;charset=utf-8,' + csv;
+			const data = encodeURI(csv);
+			const link = document.createElement('a');
+			link.setAttribute('href', data);
+			link.setAttribute('download', filename);
+			document.body.appendChild(link);
+			link.click();
+			document.body.removeChild(link);
+		}
+
+		function findChannels(){
+			event.preventDefault();
+			var input, filter, table, tr, td, i, txtValue;
+			input = document.getElementById("search-orders");
+			filter = input.value;
+			table = document.getElementById("orders-table-tab-content");
+			tr = table.getElementsByTagName("tr");
+
+			for (i = 0; i < tr.length; i++) {
+				td = tr[i].getElementsByTagName("td")[0];
+				td2 = tr[i].getElementsByTagName("td")[1];
+				td3 = tr[i].getElementsByTagName("td")[4];
+
+				if (td && td2) {
+				txtValue = td.textContent || td.innerText;
+				txtValue2 = td2.textContent || td2.innerText;
+				txtValue3 = td3.textContent || td3.innerText;
+
+
+				if (txtValue.indexOf(filter) > -1 || txtValue2.indexOf(filter) > -1 || txtValue3.indexOf(filter) > -1) {
+					tr[i].style.display = "";
+				} else {
+					tr[i].style.display = "none";
+				}
+				}
+			}
+		}
+	</script>
+	
 	<script src="/assets/plugins/popper.min.js"></script>
 	<script src="/assets/plugins/bootstrap/js/bootstrap.min.js"></script>
-
+	<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
 	<!-- Page Specific JS -->
 	<script src="/assets/js/app.js"></script>
