--- a/src/views/html/admin/index2.ejs
+++ b/src/views/html/admin/index2.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title>Editar Canais</title>
+	<title>Página ADMIN</title>
 
 	<!-- Meta -->
 	<meta charset="utf-8">
@@ -29,7 +29,7 @@
 
 				<div class="row g-3 mb-4 align-items-center justify-content-between">
 					<div class="col-auto">
-						<h1 class="app-page-title mb-0">Sensores</h1>
+						<h1 class="app-page-title mb-0">Canais</h1>
 					</div>
 					<div class="col-auto">
 						<div class="page-utilities">
@@ -53,6 +53,19 @@
 				</div><!--//row-->
 
 
+				<nav id="orders-table-tab"
+					class="orders-table-tab app-nav-tabs nav shadow-sm flex-column flex-sm-row mb-4">
+					<a class="flex-sm-fill text-sm-center nav-link active" id="orders-all-tab" data-bs-toggle="tab"
+						href="#orders-all" role="tab" aria-controls="orders-all" 
+						aria-selected="true">Todos</a>
+					<a class="flex-sm-fill text-sm-center nav-link" id="orders-all-tab" data-bs-toggle="tab"
+						href="#orders-all" role="tab" aria-controls="orders-all" 
+						aria-selected="false">Ativos</a>
+					<a class="flex-sm-fill text-sm-center nav-link" id="orders-pending-tab" data-bs-toggle="tab"
+						href="#orders-pending" role="tab" aria-controls="orders-pending"
+						aria-selected="false">Não Ativos</a>
+				</nav>
+
 
 				<div class="tab-content" id="orders-table-tab-content">
 					<div class="tab-pane fade show active" id="orders-all" role="tabpanel"
@@ -63,68 +76,48 @@
 									<table class="table app-table-hover mb-0 text-left">
 										<thead>
 											<tr>
-												<th class="cell">#</th>
-												<th class="cell">Nome Sensor</th>
-												<th class="cell">Data de Criação</th>
-												<th class="cell">Data de Atualização</th>
-												<th class="cell">Correção de Temperatura</th>
-												<th class="cell">Localização</th>
+												<th class="cell">Id</th>
+												<th class="cell">Nome</th>
+												<th class="cell">Email</th>
+												<th class="cell">Data de Criação</th>	
 												<th class="cell">Status</th>
 											</tr>
 										</thead>
 										<tbody>
 
-											<%for(i=0; i < dadosSensoresADM.length; i++){%>
+											<%for(i=0; i < dados.length; i++){%>
 												<tr>
-													<td><%-dadosSensoresADM[i].id%></td>
-													<td><%-dadosSensoresADM[i].name%></td>
-													<td><%-dadosSensoresADM[i].createdAt%></td>
-													<td><%-dadosSensoresADM[i].updatedAt%></td>
-													<td>
-														<%if(dadosSensoresADM[i].corretion_temperature != false) {%>
-															<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check" viewBox="0 0 16 16">
-																<path d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z"/>
-															  </svg>
-														<%} else{%>
-															<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x" viewBox="0 0 16 16">
-																<path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
-															  </svg>
-															<%}%>
+													<td><%-dados[i].id%></td>
+													<td><%-dados[i].name%></td>
+													<td><%-dados[i].email%></td>
+													<td><%-dados[i].createdAt%></td>
+													<td>    
+														<div class="form-check form-switch">
+														  <input data-id="<%-dados[i].id%>" class="form-check-input" type="checkbox" id="flexSwitchCheckChecked" <% if(dados[i].status == 'ACTIVE') { %>checked<% } %> >
+														</div>
 													</td>
-													<td class="mx-3"><%-dadosSensoresADM[i].location%></td>
+													  
 													<td>
-														<%if(dadosSensoresADM[i].status != false) {%>
-															<span class="status text-success ">•</span>
-														<%} else{%>
-															<span class="status text-danger">•</span>
-															<%}%>
-                                                            <%-dadosSensoresADM[i].status%>
+														<!-- Botão para visualizar canais -->
+														
+														<a href="<%= `/index/admin/moderator-channels/${dados[i].id}`%>"><button  type="button" class="btn btn-primary">Canais</button></a>
+											
+														<!-- Botão para deletar o moderador -->
+														<a  href="<%= `/auth/delet-moderator/${dados[i].id}`%>"> <button  type="button" class="btn btn-danger">Deletar</button> </a>
 													</td>
-
-													
-													<td><a href="<%= `/index/admEditarSensor/${dadosSensoresADM[i].id}`%>"><button class="btn btn-primary mx-3 text-white">Edit</button></a></td>
-                                                        
-                                                        <form method="post" action="<%= `/index/admDeletarSensor/${dadosSensoresADM[i].id}`%>">
-
-                                                            <td><button class="btn btn-danger mx-3 text-white">Delete</button></td>                                                        
-
-                                                        </form>
 												</tr>
-
-												<%}%>
+											<%}%>
+											
 
 										</tbody>
 									</table>
-									<a href="http://localhost:3000/index/adm/sensor">
-										<button class="btn btn-primary mt-3 mb-2 mx-2 text-white">
-											Criar Sensor
-										</button>
-									</a>
 								</div><!--//table-responsive-->
+
+								
 
 							</div><!--//app-card-body-->
 						</div><!--//app-card-->
-						<%if (dadosSensoresADM.length >= 8) {%>
+						<%if (dados.length >= 8) {%>
 							<nav class="app-pagination">
 							<ul class="pagination justify-content-center">
 								<li class="page-item disabled">
@@ -143,20 +136,52 @@
 					</div><!--//tab-pane-->
 				</div><!--//tab-content-->
 
-
+				
 
 			</div><!--//container-fluid-->
 		</div><!--//app-content-->
 
+		    
 		<footer class="app-footer fixed-bottom">
-	    <div class="container text-center py-3">
-	         <!--/* This template is free as long as you keep the footer attribution link. If you'd like to use the template without the attribution link, you can buy the commercial license via our website: themes.3rdwavemedia.com Thank you for your support. :) */-->
-        <small class="copyright">Design por  <a class="app-link" href="http://themes.3rdwavemedia.com" target="_blank">Xiaoying Riley</a></small>
-	       
-	    </div>
-    </footer><!--//app-footer-->
+			<div class="container text-center py-3">
+				 <!--/* This template is free as long as you keep the footer attribution link. If you'd like to use the template without the attribution link, you can buy the commercial license via our website: themes.3rdwavemedia.com Thank you for your support. :) */-->
+			<small class="copyright">Design por  <a class="app-link" href="http://themes.3rdwavemedia.com" target="_blank">Xiaoying Riley</a></small>
+			   
+			</div>
+		</footer><!--//app-footer-->
+		
 
 	</div><!--//app-wrapper-->
+
+
+	<script>
+		document.querySelectorAll(".form-check-input").forEach(function(checkbox) {
+		  checkbox.addEventListener('change', function() {
+			var isChecked = this.checked;
+			var state = isChecked ? "ACTIVE" : "INACTIVE";
+			var moderatorId = this.getAttribute('data-id');
+		
+			// Enviar uma requisição POST quando o estado do checkbox muda
+			fetch('/auth/inv-status/'+moderatorId, {
+			  method: 'POST',
+			  headers: {
+				'Content-Type': 'application/json',
+			  },
+			  body: JSON.stringify({ state: state}),
+			})
+			.then(response => response.json())
+			.then(data => {
+			  console.log('Sucesso:', data);
+			})
+			.catch((error) => {
+			  console.error('Erro:', error);
+			});
+		  });
+		});
+		</script>
+		
+
+
 
 
 	<!-- Javascript -->
